// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
<button
  className="bg-color-primary text-color-bold hover:bg-color-primary-hover active:color-primary-active flex justify-center items-center border-transparent py-2 px-4 rounded-md font-semibold border"
>
  Click me!
</button>
`;

exports[`Button component should render correctly 2`] = `
<button
  className="text-color-thin  dark:border-dark-mode dark:text-color-thin-dark hover:bg-gray-200 active:bg-gray-300 dark:hover:bg-blue-500 dark:hover:text-white dark:hover:border-blue-500 dark:active:bg-blue-700 dark:active:border-blue-700 py-2 px-4 rounded-md font-semibold border"
>
  Click me!
</button>
`;

exports[`Button component should render correctly 3`] = `
<button
  className="hover:bg-gray-200 dark:hover:bg-slate-500 border-transparent py-2 px-4 rounded-md font-semibold border"
>
  Click me!
</button>
`;
